<resources>
    <string name="app_name">SamihTaskMng2017</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign up</string>
    <string name="repassword">Rewrite Password</string>
    <string name="name">Enter Your Name</string>
    <string name="phone">Enter your phone number</string>
    <string name="save">Save</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signOut">Sign Out</string>
    <string name="iscompleted">Is Completed</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="groupName">Group Name</string>
    <string name="Address">Address</string>
    <string name="text">Task Text</string>
    <string name="select">Select</string>
</resources>
